--- a/Razor Example/Pages/BookList/Index.cshtml
+++ b/Razor Example/Pages/BookList/Index.cshtml
@@ -8,7 +8,7 @@
 <h2>Book list</h2>
 <br />
 
-<a asp-action="Create" class="btn btn-primary">Create New Book</a>
+<a asp-page="Create" class="btn btn-primary">Create New Book</a>
 
 @if(Model.Books.Count() > 0)
 {
